--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: editable_pin_field
 description: An editable pin code text field for Flutter. Use this plugin for creating custom OTP value forms.
 version: 0.1.0
-author:
-homepage:
+author: Sovit Poudel <sovit.poudel@gmail.com>
+homepage: https://github.com/psovit/editable_pin_field
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
